# grc-compliance-audit-env

./: .gitignore  Dockerfile  README.md  grc_compliance_audit_env_context.md  inference.py  openenv.yaml  prd.docx  pyproject.toml  tasklist.docx  validate_taxonomies.py
grc_compliance_audit_env/: __init__.py  client.py  models.py
grc_compliance_audit_env/server/: __init__.py  app.py  grc_environment.py  requirements.txt
grc_compliance_audit_env/server/data/fixtures/: easy_access_control_policy.json  easy_access_control_policy.txt  hard_complete_isms_policy.json  hard_complete_isms_policy.txt  medium_infosec_policy.json  medium_infosec_policy.txt
grc_compliance_audit_env/server/data/taxonomies/: iso27001_controls.json  nist_80053_families.json  soc2_tsc.json
grc_compliance_audit_env/server/graders/: __init__.py  classification_grader.py  cross_framework_grader.py  gap_grader.py
grc_compliance_audit_env/server/tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
server/: app.py
