[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-compliance-audit-env"
version = "0.1.0"
description = "OpenEnv RL environment for GRC compliance auditing against ISO 27001, NIST 800-53, and SOC 2."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vishnunetaran"},
]
keywords = ["grc", "compliance", "iso27001", "nist", "soc2", "reinforcement-learning", "openenv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["grc_compliance_audit_env*", "server*"]

[project.scripts]
server = "server.app:start"
